DT-1656 Fixes modal positioning on safari

--- a/src/client/components/molecules/modal.scss
+++ b/src/client/components/molecules/modal.scss
@@ -9,10 +9,16 @@
 
 .content {
     background-color: white;
-    position: relative;
+    position: absolute;
     width: 665px;
     top: 50%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     margin: auto;
     padding: 40px 40px 30px;
     font-family: "Source Sans Pro";
@@ -23,13 +29,13 @@
         height: auto;
         margin: auto;
         padding: 8vw;
-        left: 5%;
+        left: 50%;
         top: 50%;
-        -ms-transform: translateY(-50%);
-        -webkit-transform: translateY(-50%);
-        -moz-transform: translateY(-50%);
-        -o-transform: translateY(-50%);
-        transform: translateY(-50%);
+        -ms-transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
 }
 
